@startuml

title __MODEL's Class Diagram__\n

  namespace com.example.search_eat_pis {
    namespace Model {
      class com.example.search_eat_pis.Model.Coordenada {
          - latitud : double
          - longitud : double
          + Coordenada()
          + Coordenada()
          + distancia()
          + getLatitud()
          + getLongitud()
      }
    }
  }

  

  namespace com.example.search_eat_pis {
    namespace Model {
      class com.example.search_eat_pis.Model.Local {
          - color : String
          - direccion : String
          - distancia : double
          - etiquetas : ArrayList<String>
          - foto : String
          - iD : String
          - nombre : String
          - num_valoraciones : long
          - precio : long
          - valoracion : double
          + Local()
          + addValoracion()
          + getCoordenada()
          + getDireccion()
          + getDistancia()
          + getEtiquetas()
          + getFoto()
          + getNombre()
          + getNumValoraciones()
          + getPrecio()
          + getPrecio_medio()
          + getValoracion()
          + setDistancia()
          + updateValociones()
      }
    }
  }
  

  namespace com.example.search_eat_pis {
    namespace Model {
      class com.example.search_eat_pis.Model.Reserva {
          - fecha : Calendar
          - local : String
          - nombre : String
          - personas : long
          - reservaID : String
          - telefono : long
          + Reserva()
          + deleteReserva()
          + getFecha()
          + getId()
          + getLocal()
          + saveReserva()
          + setId()
          + valorar()
      }
    }
  }
  

  namespace com.example.search_eat_pis {
    namespace Model {
      class com.example.search_eat_pis.Model.Sector {
          - bar : ArrayList<String>
          - cafe : ArrayList<String>
          - restaurant : ArrayList<String>
          + Sector()
          + getBares()
          + getCafes()
          + getCoordenada()
          + getRestaurantes()
      }
    }
  }
  

  namespace com.example.search_eat_pis {
    namespace Model {
      class com.example.search_eat_pis.Model.Usuario {
          {static} + usuario_actual : Usuario
          - contrase�a : String
          - correo : String
          - nombre : String
          - reservas : ArrayList<String>
          - telefono : long
          + Usuario()
          + addReserva()
          + deleteReserva()
          + getCorreo()
          + getReservas()
          + saveUsuario()
          + updateUsuario()
          + updateUsuarioReserva()
      }
    }
  }
  


  com.example.search_eat_pis.Model.Local o-- com.example.search_eat_pis.Controller.DatabaseAdapter : adapter
  com.example.search_eat_pis.Model.Local o-- com.example.search_eat_pis.Model.Coordenada : coordenada
  com.example.search_eat_pis.Model.Reserva o-- com.example.search_eat_pis.Controller.DatabaseAdapter : adapter
  com.example.search_eat_pis.Model.Sector o-- com.example.search_eat_pis.Model.Coordenada : coordenada
  com.example.search_eat_pis.Model.Usuario o-- com.example.search_eat_pis.Controller.DatabaseAdapter : adapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
